Initialize project, Added Authentication and User Controllers

--- a/ToDoApp/ToDo.API/appsettings.Development.json
+++ b/ToDoApp/ToDo.API/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "Authentication": {
+    "Issuer": "https://localhost:7034",
+    "Audience": "todoapp",
+    "SigningKey": "7bapCs1yPcBkju8qvaABWRXpFuwxyiXG",
+    "TokenDuration": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
